--- a/angular-blog/src/styles.css
+++ b/angular-blog/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #262626;
+}
