Estilização do componente big-card

--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,21 @@
-<p>big-card works!</p>
+<div class="big-card__container">
+    <div class="big-card__picture">
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" alt="Image"
+        width="350px"
+        height="300px"
+        >
+    </div>
+
+    <div class="big-card__title">
+        <app-label></app-label>
+        <h2>First post on the blog</h2>
+        <p>
+            Desde CSS que desmorona no Internet Explorer até nomes de variáveis como banana e coisa_123, cada dia traz novos desafios e risadas. No fim, se não pudermos rir dos nossos bugs, vamos acabar chorando. Brinde aos desenvolvedores: mestres do código e comediantes digitais!
+        </p>
+    </div>
+
+    <div class="big-card__description">
+
+    </div>
+</div>
