--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -9,9 +9,13 @@
 
     <div class="big-card__title">
         <app-label></app-label>
-        <h2>First post on the blog</h2>
+        <a href=""></a>
+        <h2><a href="">First post on the blog</a></h2>
         <p>
-            Desde CSS que desmorona no Internet Explorer até nomes de variáveis como banana e coisa_123, cada dia traz novos desafios e risadas. No fim, se não pudermos rir dos nossos bugs, vamos acabar chorando. Brinde aos desenvolvedores: mestres do código e comediantes digitais!
+            <a href="">
+                Desde CSS que desmorona no Internet Explorer até nomes de variáveis como banana e coisa_123, cada dia traz novos desafios e risadas. 
+            </a>
+            
         </p>
     </div>
 
