--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,15 @@
-<p>small-card works!</p>
+<div class="small-card__container">
+    
+    <div class="small-card__picture">
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" alt="Image"
+        >
+    </div>
+
+    <div class="small-card__title">
+        <app-label></app-label>
+        <a href=""></a>
+        <h2><a href="">First post on the blog</a></h2>
+        
+    </div>
+</div>
