--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -8,8 +8,7 @@
 
     <div class="small-card__title">
         <app-label></app-label>
-        <a href=""></a>
-        <h2><a href="">First post on the blog</a></h2>
+        <h2><a href="">First post on the blog - and the best in the web</a></h2>
         
     </div>
 </div>
