Estilização do componente  navbar

--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<header><app-navbar></app-navbar></header>
 <app-title-description></app-title-description>
 <div class="articles">
     <div class="articles__main">
