--- a/angular-blog/src/app/components/navbar/navbar.component.html
+++ b/angular-blog/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<div class="navbar__container">
+    <img src="https://i.fbcd.co/products/resized/resized-750-500/gk-letter-logo-design-2-ec71b461d4574ba4db561c386e53957dd47b2d7756bb0536a85924924075d7fc.webp" alt="Logo">
+    
+    <ul class="navbar-links__container">
+        <li><a href="">For recruiters</a></li>
+        <li><a href="">For customers</a></li>
+        <li><a href="">Portfolio</a></li>
+    </ul>
+</div>
