Adicionei fontes alternativas

--- a/angular-blog/src/app/components/title-description/title-description.component.html
+++ b/angular-blog/src/app/components/title-description/title-description.component.html
@@ -1,5 +1,5 @@
 <div class="title__description__container">
     <p class="label">Blog</p>
-    <h1>MY BLOG</h1>
-    <p>bem vindo ao blog mais brabo desse planeta chamado Brasil!!!</p>
+    <h1>Knupp's blog</h1>
+    <p>Bem vindo ao blog mais brabo desse planeta chamado Brasil!!!</p>
 </div>
