--- a/angular-blog/src/styles.css
+++ b/angular-blog/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    padding: 0;
+    
+    
+    font-family: "Arimo", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     margin: 0;
     box-sizing: border-box;
     background-color: #262626;
