--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -2,12 +2,32 @@
 <app-title-description></app-title-description>
 <div class="articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card 
+        photoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
+        cardTitle="Teste"
+        cardDescription="Texto"
+        >
+        </app-big-card>
     </div>
     <div class="articles__additional">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+
+        <app-small-card 
+        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallCardTitle="teste"
+        >
+        </app-small-card>
+
+        <app-small-card 
+        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallCardTitle="teste"
+        >
+        </app-small-card>
+
+        <app-small-card 
+        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallCardTitle="teste"
+        >
+        </app-small-card>
     </div>
 </div>
 
