--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -1,14 +1,15 @@
 <div class="small-card__container">
-    
+   
     <div class="small-card__picture">
         <img 
-        src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" alt="Image"
+        src={{smallPhotoCover}}
+        alt="Image"
         >
     </div>
 
     <div class="small-card__title">
-        <app-label></app-label>
-        <h2><a href="">First post on the blog - and the best in the web</a></h2>
+        <app-label textLabel="Finance"></app-label>
+        <h2><a href="">{{smallCardTitle}}</a></h2>
         
     </div>
 </div>
