--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <header><app-navbar></app-navbar></header>
-<app-title-description></app-title-description>
+<app-title-description class="teste"></app-title-description>
 <div class="articles">
     <div class="articles__main">
         <app-big-card 
