--- a/angular-blog/src/app/components/navbar/navbar.component.html
+++ b/angular-blog/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar__container">
-    <img src="blob:null/e7d8b41b-b232-4db9-b554-6000b8f8e75e" alt="Logo">
+    <img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/logo.png?raw=true" alt="Logo">
     
     <ul class="navbar-links__container">
         <li><a href="">For recruiters</a></li>
