--- a/angular-blog/src/styles.css
+++ b/angular-blog/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 * {
     
-    
     font-family: "Arimo", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -14,4 +13,7 @@
 
 a {
     text-decoration: none;
+}
+ul{
+    list-style: none;
 }
