--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="articles">
     <div class="articles__main">
         <app-big-card 
-        photoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg"
+        photoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/photo_1.png?raw=true"
         cardTitle="Teste"
         cardDescription="Texto"
         >
