Esytilização da imagem do big card

--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -12,19 +12,19 @@
     <div class="articles__additional">
 
         <app-small-card 
-        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_01.jpg?raw=true" 
         smallCardTitle="teste"
         >
         </app-small-card>
 
         <app-small-card 
-        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_02.jpg?raw=true" 
         smallCardTitle="teste"
         >
         </app-small-card>
 
         <app-small-card 
-        smallPhotoCover="https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg" 
+        smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_03.jpg?raw=true" 
         smallCardTitle="teste"
         >
         </app-small-card>
