--- a/angular-blog/src/app/components/big-card/big-card.component.css
+++ b/angular-blog/src/app/components/big-card/big-card.component.css
@@ -11,10 +11,14 @@
     padding: 1.5rem;
 }
 
+
 .big-card__picture > img{
+    
+    padding: 1.5rem 0;
     margin-top: 25px;
-    border: 1.5px #b9010177 solid;
-    min-width: 100%;
+    /* border: 1.5px #b9010177 solid; */
+    min-width: auto;
+   
      
    
 }
