--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="big-card__title">
-        <app-label textLabel="Main"></app-label>
+        <app-label [textLabel]="textLabel" bgColor="linear-gradient(135deg, #b90101, #C98508)"></app-label>
         <a href=""></a>
         <h2><a href="">{{ cardTitle }}</a></h2>
         <p>
