--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="small-card__title">
-        <app-label textLabel="Finance"></app-label>
+        <app-label [ngClass]="dinamicStyles" [textLabel]="textLabel"></app-label>
         <h2><a href="">{{smallCardTitle}}</a></h2>
         
     </div>
