--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -3,29 +3,34 @@
 <div class="articles">
     <div class="articles__main">
         <app-big-card 
-        photoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/photo_1.png?raw=true"
-        cardTitle="Teste"
-        cardDescription="Texto"
+        textLabel="Who's"
+        photoCover="https://avatars.githubusercontent.com/u/47991004?s=400&u=6214c973447aff091b334f1af0a55994151a0c22&v=4"
+        cardTitle="Quem sou eu ? "
+        cardDescription="Um pouco mais sobre sim"
         >
         </app-big-card>
     </div>
     <div class="articles__additional">
 
         <app-small-card 
+        
+        textLabel = "Leitura"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_01.jpg?raw=true" 
-        smallCardTitle="teste"
+        smallCardTitle="Livros bãos"
         >
         </app-small-card>
 
         <app-small-card 
+        textLabel="Rádio pião"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_02.jpg?raw=true" 
-        smallCardTitle="teste"
+        smallCardTitle="Tá na boca do povo"
         >
         </app-small-card>
 
         <app-small-card 
+        textLabel="Geral"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_03.jpg?raw=true" 
-        smallCardTitle="teste"
+        smallCardTitle="Uma luz no fim do túnel"
         >
         </app-small-card>
     </div>
