implementação dinâmica dos gradientes no componente label

--- a/angular-blog/src/app/components/label/label.component.html
+++ b/angular-blog/src/app/components/label/label.component.html
@@ -1,1 +1,1 @@
-<p class="label" [style.background]="bgColor">{{ textLabel }}</p>
+<p class="label" [style.background]="bgColorLabel">{{ textLabel }}</p>
