--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -4,17 +4,18 @@
     <div class="articles__main">
         <app-big-card 
         textLabel="Who's"
+        bgColorLabel="linear-gradient(135deg, #b90101, #C98508)"
         photoCover="https://avatars.githubusercontent.com/u/47991004?s=400&u=6214c973447aff091b334f1af0a55994151a0c22&v=4"
         cardTitle="Quem sou eu ? "
-        cardDescription="Um pouco mais sobre sim"
+        cardDescription="Um pouco mais sobre mim"
         >
         </app-big-card>
     </div>
     <div class="articles__additional">
 
         <app-small-card 
-        
         textLabel = "Leitura"
+        bgColorLabel="linear-gradient(135deg, #3B191E, #FA0B16)"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_01.jpg?raw=true" 
         smallCardTitle="Livros bãos"
         >
@@ -22,6 +23,7 @@
 
         <app-small-card 
         textLabel="Rádio pião"
+        bgColorLabel="linear-gradient(135deg, #121578, #a3313a)"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_02.jpg?raw=true" 
         smallCardTitle="Tá na boca do povo"
         >
@@ -29,6 +31,7 @@
 
         <app-small-card 
         textLabel="Geral"
+        bgColorLabel="linear-gradient(135deg, #ba5018, #7d131c)"
         smallPhotoCover="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/image_03.jpg?raw=true" 
         smallCardTitle="Uma luz no fim do túnel"
         >
