--- a/angular-blog/src/app/components/navbar/navbar.component.responsive.css
+++ b/angular-blog/src/app/components/navbar/navbar.component.responsive.css
@@ -1,11 +1,11 @@
-@media (max-width:500px) {
+@media (max-width:800px) {
     
     .navbar__container{
     
         display: flex;
-        justify-content: space-between;
-        width: 50%;   
-        height: 5vh;
+        justify-content: center;
+        width: 100%;   
+        height: 8vh;
         padding: 0;
     }
     
@@ -14,9 +14,4 @@
                 
     }
    
-    .navbar-links__container img{
-    
-        width: 0.5rem;
-            
-    }
 }
