Criação dos componentes da navbar

--- a/angular-steam/src/app/components/navbar/navbar-logo/navbar-logo.component.html
+++ b/angular-steam/src/app/components/navbar/navbar-logo/navbar-logo.component.html
@@ -1,1 +1,2 @@
-<p>navbar-logo works!</p>
+<img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-steam/steam-logo-13-removebg-preview.png?raw=true" alt="Logo da Steam">
+
