--- a/angular-steam/src/app/components/navbar/navbar.component.html
+++ b/angular-steam/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<div>
+    <app-navbar-logo></app-navbar-logo>
+    <app-navbar-search-bar></app-navbar-search-bar>
+    <app-navbar-notification></app-navbar-notification>
+    <app-navbar-profile></app-navbar-profile>
+</div>
