Instalação do angular material.

--- a/angular-steam/src/styles.css
+++ b/angular-steam/src/styles.css
@@ -10,3 +10,5 @@ body{
     background-color: #15181E;
     color: aliceblue;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
