Criei sub-componentes da navbar ( logo, barra de pesquisa e notificações )

--- a/angular-steam/src/app/components/navbar/navbar-notification/navbar-notification.component.html
+++ b/angular-steam/src/app/components/navbar/navbar-notification/navbar-notification.component.html
@@ -1,1 +1,10 @@
-<p>navbar-notification works!</p>
+<div class="wrapper">
+    <div class="icon-container">
+        <i class="material-icons">notifications</i>
+        <span class="notification-badge"></span>
+    </div>
+    <div class="icon-container">
+        <i class="material-icons">shopping_cart</i>
+        <span class="notification-badge"></span>
+    </div>
+</div>
