--- a/angular-steam/src/app/components/navbar/navbar-search-bar/navbar-search-bar.component.html
+++ b/angular-steam/src/app/components/navbar/navbar-search-bar/navbar-search-bar.component.html
@@ -1,3 +1,4 @@
-<div>
-    <input type="search" placeholder="Search others">
-</div>
+<mat-form-field appearance="outline" class="custom-input" style="height: 2.5rem;">
+    <input matInput placeholder="Search others" style="height: 100%; padding: 0 0.5rem;">
+    <mat-icon matPrefix>search</mat-icon>
+</mat-form-field>
