Estilizações no componente de perfil do navbar

--- a/angular-steam/src/app/components/navbar/navbar-notification/navbar-notification.component.css
+++ b/angular-steam/src/app/components/navbar/navbar-notification/navbar-notification.component.css
@@ -1,5 +1,8 @@
 .wrapper{
+    width: 100%;
     display: flex;
+   justify-content: space-between;
+   align-items: center;
     gap: 1.25rem;
 }
 .icon-container {
