--- a/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.html
+++ b/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.html
@@ -1,5 +1,4 @@
 <div>
-    <img src="" alt="Picture">
-    <span>NOME</span>
-    
+    <img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-steam/avatar.png?raw=true" alt="Picture">
+    <span>User287</span>    
 </div>
