--- a/angular-steam/src/app/components/navbar/navbar.component.css
+++ b/angular-steam/src/app/components/navbar/navbar.component.css
@@ -1,7 +1,8 @@
 div {
+    width: 100vw;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 4rem;
-    margin: 25px 0px 0px 10px;
+    justify-content: space-evenly;  
+    gap: 2rem;  
+    margin: 25px 10px 5px 5px;
 }
