Adicionei estilizações no conatiner do big-card-component

--- a/angular-steam/src/app/components/big-card-game/big-card-game.component.html
+++ b/angular-steam/src/app/components/big-card-game/big-card-game.component.html
@@ -1,1 +1,46 @@
-<p>big-card-game works!</p>
+<mat-card class="container-card" appearance="outlined">
+
+  <mat-card class="big-card">
+    <mat-card-header>
+    
+      <mat-chip-set aria-label="game categories">
+  
+        <mat-chip>
+          <app-big-card-game-label></app-big-card-game-label>
+        </mat-chip>
+        <mat-chip>
+          <app-big-card-game-label></app-big-card-game-label>
+        </mat-chip>
+        <mat-chip>
+          <app-big-card-game-label></app-big-card-game-label>
+        </mat-chip>
+  
+      </mat-chip-set>
+  
+      <!-- <mat-card-title>Title</mat-card-title> -->
+    </mat-card-header>
+  
+    <mat-card-content>
+      <p>teste</p>
+    </mat-card-content>
+  
+    <mat-card-footer class="example-card-footer">
+  
+      
+  
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card class="small-card">
+
+  
+    <mat-card-content>
+      <p>teste</p>
+    </mat-card-content>
+  
+    <mat-card-footer class="example-card-footer">
+  
+    <button>teste-button</button>
+    </mat-card-footer>
+  </mat-card>
+</mat-card>
