--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.css
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.css
@@ -23,7 +23,7 @@
     /* max-width: 95vw; */
     min-height: 65vh;
     /* padding: 2rem; */
-    background-color: #f0f0f18f;
+    background-color: #15181E;
     overflow: hidden;
 }
       
