--- a/angular-steam/src/app/components/big-card-game/big-card-game.component.html
+++ b/angular-steam/src/app/components/big-card-game/big-card-game.component.html
@@ -21,7 +21,7 @@
     </mat-card-header>
   
     <mat-card-content>
-      <p>teste</p>
+      
     </mat-card-content>
   
     <mat-card-footer class="example-card-footer">
@@ -31,16 +31,8 @@
     </mat-card-footer>
   </mat-card>
 
-  <mat-card class="small-card">
-
   
-    <mat-card-content>
-      <p>teste</p>
-    </mat-card-content>
+  <app-small-card-game></app-small-card-game>
   
-    <mat-card-footer class="example-card-footer">
-  
-    <button>teste-button</button>
-    </mat-card-footer>
-  </mat-card>
+    
 </mat-card>
