--- a/angular-steam/src/app/components/small-card-game/small-card-game.component.html
+++ b/angular-steam/src/app/components/small-card-game/small-card-game.component.html
@@ -1,1 +1,12 @@
-<p>small-card-game works!</p>
+<mat-card>
+    <mat-card-content>
+        <h3>Stray</h3>
+        <p>
+        Lost, alone and separated from family. a stary cat must untangle an ancient mystery to escape a long-forgotten cybercity and find their way home.
+        </p>
+    </mat-card-content>
+
+  <mat-card-footer class="example-card-footer">
+    <button>teste-button</button>
+  </mat-card-footer>
+</mat-card>
