--- a/angular-steam/src/app/pages/home/home.component.html
+++ b/angular-steam/src/app/pages/home/home.component.html
@@ -2,5 +2,5 @@
     <app-navbar></app-navbar>
     <app-sidebar></app-sidebar>
     <!-- <app-big-card-game></app-big-card-game> -->
-    <app-small-card-game></app-small-card-game>
+    <!-- <app-small-card-game></app-small-card-game> -->
 </div>
