Conversão de tamanhos para melhorar a usabilidade do site.

--- a/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.html
+++ b/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.html
@@ -1,4 +1,4 @@
 <div>
     <img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-steam/avatar.png?raw=true" alt="Picture">
-    <span>User287</span>    
+    <span>GatoLoco</span>    
 </div>
