--- a/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.css
+++ b/angular-steam/src/app/components/navbar/navbar-profile/navbar-profile.component.css
@@ -1,9 +1,13 @@
 div{
-     display: flex;
+    display: flex;
     align-items: center;
     gap: 0.75rem;
-    /* margin-right: 1.75rem; */
+    
 }
 div > img {
-    width: 40px;
+    width: 55px;
+}
+
+span{
+    font-size: larger;
 }
