Ajustes na interface

--- a/angular-steam/src/app/components/big-card-game/big-card-game.component.html
+++ b/angular-steam/src/app/components/big-card-game/big-card-game.component.html
@@ -31,8 +31,15 @@
     </mat-card-footer>
   </mat-card>
 
+  <div>
+    <app-small-card-game></app-small-card-game>
+    <div style="display: flex; gap:15px">
+      <app-small-card-simple></app-small-card-simple>
+      <app-small-card-simple></app-small-card-simple>
+    </div>
+    
+  </div>
   
-  <app-small-card-game></app-small-card-game>
   
     
 </mat-card>
