--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.css
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.css
@@ -2,6 +2,7 @@
     min-height: 20rem !important;
     padding: 1rem 0 0 3.5rem ;
     background-color: #15181E;
+    margin-left: 3rem;
     /* background-color: #f0f0f18f; */
 }
 
