--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
@@ -33,7 +33,7 @@
   
     <mat-sidenav-content>
       <!-- Conteúdo Principal -->
-      <button mat-button (click)="sidenav.toggle()">Acessar barra lateral</button>
+      <button mat-button (click)="sidenav.toggle()"> <- </button>
       <app-big-card-game></app-big-card-game>
     </mat-sidenav-content>
 
