--- a/angular-steam/src/app/components/big-card-game/big-card-game.component.css
+++ b/angular-steam/src/app/components/big-card-game/big-card-game.component.css
@@ -1,10 +1,10 @@
 .container-card{
     height: 85vh !important;
-    width: 90vw !important;
+    width: 85vw !important;
     display: grid;
-    grid-template-columns: 1.5fr 0.5fr; 
-    grid-template-rows: 1fr;
-    column-gap: 12px;
+    grid-template-columns: 1.5fr 0.65fr; 
+    grid-template-rows: 1.75fr 0.25fr;
+    column-gap: 15px;
     background-color: #15181E;
     border: none !important;
     
@@ -29,9 +29,6 @@
       no-repeat,
       no-repeat;
 
-    
-    
-    
-    
+       
     
 }
