--- a/angular-steam/src/app/components/big-card-game/big-card-game.component.html
+++ b/angular-steam/src/app/components/big-card-game/big-card-game.component.html
@@ -31,9 +31,9 @@
     </mat-card-footer>
   </mat-card>
 
-  <div>
+  <div style="display: flex; flex-direction: column;">
     <app-small-card-game></app-small-card-game>
-    <div style="display: flex; gap:15px">
+    <div style="display: flex; gap:15px;">
       <app-small-card-simple></app-small-card-simple>
       <app-small-card-simple></app-small-card-simple>
     </div>
