--- a/angular-steam/src/app/components/small-card-game/small-card-simple/small-card-simple.component.html
+++ b/angular-steam/src/app/components/small-card-game/small-card-simple/small-card-simple.component.html
@@ -1,1 +1,3 @@
-<img src="/home/gknpp/Downloads/stray-01.jpeg" alt="Imagem demonstrativa do game">
+
+<img src="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-steam/stray-2.jpg?raw=true" alt="">
+
