--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
@@ -33,8 +33,16 @@
   
     <mat-sidenav-content>
       <!-- Conteúdo Principal -->
-      <button mat-button (click)="sidenav.toggle()"> <- </button>
-      <app-big-card-game></app-big-card-game>
+      <button mat-button (click)="sidenav.toggle()"> <<< </button>
+      <div>
+        <app-big-card-game></app-big-card-game>
+        
+        <div>
+            <app-small-card-special></app-small-card-special>
+        </div>
+        
+      </div>
+     
     </mat-sidenav-content>
 
   </mat-sidenav-container>
