--- a/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
+++ b/angular-steam/src/app/components/sidebar/side-card/side-card.component.html
@@ -31,14 +31,14 @@
       </p>
     </mat-sidenav>
   
-    <mat-sidenav-content> <!-- alterar o valor da largura desse container ao abrir a sidebar-->
+    <mat-sidenav-content > <!-- alterar o valor da largura desse container ao abrir a sidebar-->
       <!-- Conteúdo Principal -->
-      <button mat-button (click)="sidenav.toggle()"> <<< </button>
+      <button mat-button (click)="toggleSidenav()"> <<< </button>
      
-      <div>
+      <div [ngClass]="{'content-open': isSidenavOpen, 'content-closed': !isSidenavOpen}">
         <app-big-card-game></app-big-card-game> <!-- Passar valores de largura/altura de forma relativa-->
         <p>Special Offers</p>
-        <div style="display: flex; gap: 25px; padding: 50px; margin: auto;">
+        <div style="display: flex; gap: 1.5em; padding: 2.75em; margin: auto; overflow: hidden;"><!--adicionar estilos para a barra fechada/aberta-->
             <app-small-card-special></app-small-card-special> <!-- e necessário adicionar imagem e largura de forma dinamica -->
             <app-small-card-special></app-small-card-special>
             <app-small-card-special></app-small-card-special>
