--- a/angular-steam/src/app/components/small-card-game/small-card-game.component.css
+++ b/angular-steam/src/app/components/small-card-game/small-card-game.component.css
@@ -1,6 +1,6 @@
 mat-card{
-    height: 25vw !important;
-    width: 25vw !important;
+    min-height: 25vw !important;
+    max-width: 25vw !important;
     font-size: 10px;     
     color:aliceblue;
     line-height: 1rem;
@@ -33,8 +33,7 @@ mat-card::before {
 mat-card-content {
     position: relative;
     z-index: 1;
-    /* Content styling here */
     color: white;
     text-align: center;
     padding: 20px;
-  }
+}
